<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#91D344FF"
    tools:context=".MainActivity">


        <!-- Title -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:cardCornerRadius="22dp"
        app:cardElevation="20dp"
        android:layout_margin="10dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <!-- Cipher Selector -->
        <Spinner
            android:id="@+id/cipherSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Input Text -->
        <EditText
            android:id="@+id/inputText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:inputType="textMultiLine"
            android:autofillHints="username"
            app:layout_constraintTop_toBottomOf="@id/cipherSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Key Input -->
        <EditText
            android:id="@+id/keyInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/key"
            android:inputType="text"
            android:autofillHints="username"
            app:layout_constraintTop_toBottomOf="@id/inputText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- Encrypt/Decrypt Toggle -->
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/modeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_mode"
            android:layout_margin="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/keyInput"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- Translate Button -->
        <Button
            android:id="@+id/translateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            app:layout_constraintTop_toBottomOf="@id/keyInput"
            app:layout_constraintStart_toEndOf="@id/modeSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Output Text -->
        <TextView
            android:id="@+id/outputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output"
            android:textSize="17sp"
            android:textColor="#333333"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_margin="15dp"
            android:background="#F046C5"
            app:layout_constraintTop_toBottomOf="@id/translateButton"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!-- Copy Button -->
        <Button
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            app:layout_constraintTop_toBottomOf="@id/translateButton"
            app:layout_constraintStart_toEndOf="@id/outputText"
            app:layout_constraintBaseline_toBaselineOf="@id/outputText"
            app:layout_constraintEnd_toEndOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>